--- a/settings.json
+++ b/settings.json
@@ -6,8 +6,11 @@
       "*.aux",
       "*.bbl",
       "*.blg",
+      "*.brf",
       "*.idx",
+      "*.ilg",
       "*.ind",
+      "*.loc",
       "*.lof",
       "*.lot",
       "*.out",
